--- a/web/css/bootstrap.scss
+++ b/web/css/bootstrap.scss
@@ -1,6 +1,7 @@
 @import "../../vendor/twbs/bootstrap/scss/functions";
+@import "../../vendor/twbs/bootstrap/scss/variables";
 @import "variables";
-@import "../../vendor/twbs/bootstrap/scss/mixins";
+@import "mixins";
 @import "../../vendor/twbs/bootstrap/scss/root";
 @import "../../vendor/twbs/bootstrap/scss/print";
 @import "../../vendor/twbs/bootstrap/scss/reboot";
