--- a/web/css/site.scss
+++ b/web/css/site.scss
@@ -177,7 +177,14 @@ h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
   cursor: pointer;
 }
 
-div.required label.control-label:after {
+.fa-y {
+  margin-top: -5px;
+  margin-bottom: -5px;
+  color: $yellow;
+}
+
+div.required label.control-label:after,
+div.required label.col-form-label:after {
   content: " *";
   color: red;
 }
