--- a/web/css/admin.scss
+++ b/web/css/admin.scss
@@ -11,6 +11,10 @@
   }
 }
 
+.select2-container--krajee .select2-dropdown {
+  overflow: hidden;
+}
+
 footer {
   border-top: 2px solid #eee;
   padding: 30px 0;
