--- a/web/css/site.scss
+++ b/web/css/site.scss
@@ -146,7 +146,7 @@ h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
   }
 }
 
-.btn {
+.btn:not(.btn-link) {
   color: $white;
   text-shadow: 1px 1px 0 rgba(0,0,0,.2);
   &:hover {
@@ -241,6 +241,16 @@ footer {
 @include media-breakpoint-down(md) {}
 @include media-breakpoint-down(lg) {
   .container {
+    max-width: 100%;
+  }
+}
+
+@media print {
+  header, footer, .sidebar {
+    display: none;
+  }
+  .mainblock {
+    flex: 0 0 100%;
     max-width: 100%;
   }
 }
