--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -1,2 +1,2 @@
-.nav-tabs{margin-bottom:10px}.badge-danger{background-color:#d9534f}.badge-success{background-color:#5cb85c}.select2-container--krajee .select2-dropdown{overflow:hidden}footer{border-top:2px solid #eee;padding:30px 0;margin-top:30px}div.required label.control-label:after{content:" *";color:red}
+.nav-tabs{margin-bottom:10px}.badge-danger{background-color:#d9534f}.badge-success{background-color:#5cb85c}.badge-primary{background-color:#428bca}.badge-warning{background-color:#f0ad4e}.badge-info{background-color:#5bc0de}.select2-container--krajee .select2-dropdown{overflow:hidden}footer{border-top:2px solid #eee;padding:30px 0;margin-top:30px}div.required label.control-label:after{content:" *";color:red}.mw-250px{max-width:250px}
 /*# sourceMappingURL=admin.css.map */
