--- a/web/css/admin.scss
+++ b/web/css/admin.scss
@@ -9,6 +9,15 @@
   &-success {
     background-color: #5cb85c;
   }
+  &-primary {
+    background-color: #428bca;
+  }
+  &-warning {
+    background-color: #f0ad4e;
+  }
+  &-info {
+    background-color: #5bc0de;
+  }
 }
 
 .select2-container--krajee .select2-dropdown {
@@ -24,4 +33,9 @@ footer {
 div.required label.control-label:after {
   content: " *";
   color: red;
+}
+.mw {
+  &-250px {
+    max-width: 250px;
+  }
 }
