--- a/web/css/site.scss
+++ b/web/css/site.scss
@@ -79,6 +79,7 @@ h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
     display: block;
     color: $white;
     font-weight: $phone-font-weight;
+    white-space: nowrap;
     span, i {
       color: $yellow;
     }
