--- a/web/css/site.scss
+++ b/web/css/site.scss
@@ -49,6 +49,10 @@ h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
   }
 }
 
+.tt-menu {
+  width: auto !important;
+}
+
 .question-list,
 .review-list {
   > .media {
